[package]
name = "xtop"
version = "0.1.0"
authors = ["smallkirby <ssmallkirby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = {version = "5.100.0", features = ["extended_colors"]}
signal-hook = "0.3.10"
sysconf = "0.3.4"
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0"
